云函数，数据库调用示例

--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -4,10 +4,10 @@
   justify-content: flex-end;
   height: 100vh;
   padding: 0 10px;
-  .btn-join-team, .btn-build-team{
+  .btn-join-team, .btn-build-team, .btn-add-team{
     width: 100%;
   }
-  .btn-join-team{
+  .btn-add-team{
     margin-top: 20px;
     margin-bottom: 20px;
   }
