--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,9 +1,20 @@
 .index {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  // justify-content: flex-end;
   height: 100vh;
   padding: 0 10px;
+  background-image: url(../../asset/background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  .swiper-container{
+    width: 100%;
+    height: 55vw;
+    .image{
+      width: 100%;
+    }
+    margin-bottom: 20px;
+  }
   .btn-join-team, .btn-build-team, .btn-add-team{
     width: 100%;
   }
